--- a/rewiew-page.html
+++ b/rewiew-page.html
@@ -11,7 +11,7 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
-    <link rel="stylesheet" href="review2.css">
+    <link rel="stylesheet" href="review-page.css">
 </head>
 <body>
     <div class="container">
